Implement the login page test steps

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,3 +1,7 @@
+#URL
+
+url=http://the-internet.herokuapp.com
+
 #credentials
 
 existing.username=tomsmith
@@ -7,6 +11,6 @@ wrong.password=WrongPassword!
 
 #messages
 
-positive.login.msg=You logged into a secure area!
-wrong.username.msg=Your username is invalid!
-wrong.password.msg=Your password is invalid!
+positive.login.message=You logged into a secure area!
+wrong.username.message=Your username is invalid!
+wrong.password.message=Your password is invalid!
