--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,10 @@
             <artifactId>selenide</artifactId>
             <version>4.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 </project>
