--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,10 @@
             <artifactId>cucumber-testng</artifactId>
             <version>6.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>2.13.7</version>
+        </dependency>
     </dependencies>
 </project>
