Add Sconto Login test

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,3 +1,5 @@
 #URL
 
-url=http://the-internet.herokuapp.com
+url=https://www.sconto.de
+valid.email=abramova.violetta@gmail.com
+valid.password=GetS0meSconto!
