--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,14 @@
     <dependencies>
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java8</artifactId>
-            <version>5.0.0</version>
+            <artifactId>cucumber-java</artifactId>
+            <version>6.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>5.0.0</version>
+            <version>6.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
